# raspberry

./: checkin  checkin2  checkout  checkout2  checkout_
agocontrol/: CMakeLists.txt  README
agocontrol/cmake/: CMake_Device_Common.cmake
agocontrol/conf/: CMakeLists.txt  agorrdtool.init  zmcam.conf
agocontrol/core/: CMakeLists.txt
agocontrol/data/: datalogger.sql
agocontrol/debian/: agocontrol-alert.install  agocontrol-enocean.install  agocontrol-ipx800.install  agocontrol-mysensors.install  agocontrol-rrdtool.install  agocontrol-zmcam.install  agocontrol-zwave.install  agocontrol.install  agoping.install  control  postinst
agocontrol/devices/: CMakeLists.txt  agosimulator.py  example.py
agocontrol/devices/MySensors/: CMakeLists.txt  MySensors.cpp  MySensors.h  agoMySensors.cpp
agocontrol/devices/example/: CMakeLists.txt
agocontrol/gateways/: agomeloware.py
agocontrol/scripts/: CMakeLists.txt
agocontrol/shared/: agoclient.cpp  agoclient.h.in  agoclient.py.in
myServer/common/: fifo.c  fifo.h
myServer/mongoose-6.0/: mongoose.c  mongoose.c~
myServer/myHttpServer/: Makefile  Makefile~  db_plugin.h  db_plugin_sqlite.c~  doTcpDump  myHttpServer  myHttpServer.c  myHttpServer.c~  startMyHttpServer.sh  stopMyHttpServer.sh  testHttpClient.py  testHttpClient.py~
myServer/myTcpServer/: Makefile  myTcpServer  myTcpServer.c  startMyTcpServer.sh  stopMyTcpServer.sh  testClient.py  testClient.py~
myServer/sensorDaemon/: Makefile  dht11.cpp  dht11.h  main.cpp  wireWrapper.cpp  wireWrapper.h
pir/: Makefile  main.c  pirTest
(+158 files in other folders)
